2013-05-03  Jakub Jelinek  <jakub@redhat.com>

	* src/prelink.h (R_390_IRELATIVE): Define if not defined.

2013-04-25  Jakub Jelinek  <jakub@redhat.com>

	* src/arch-s390.c (s390_adjust_rela, s390_prelink_rela,
	s390_apply_conflict_rela, s390_prelink_conflict_rela,
	s390_undo_prelink_rela): Handle R_390_IRELATIVE.
	* src/arch-s390x.c (s390x_adjust_rela, s390x_prelink_rela,
	s390x_apply_conflict_rela, s390x_prelink_conflict_rela,
	s390x_undo_prelink_rela, s390x_reloc_size): Likewise.

2013-04-18  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/reloc4.sh: Add libraries to link lines to make
	testsuite work both with --no-add-needed and with --add-needed,
	including latest ld.bfd.
	* testsuite/reloc5.sh: Likewise.
	* testsuite/reloc8.sh: Likewise.
	* testsuite/reloc9.sh: Likewise.

2013-04-17  Jakub Jelinek  <jakub@redhat.com>

	* testsuite/ifunc.h (IFUNC_DECL): Fix up .size on ppc64.
	* testsuite/cxx1.sh: Add libraries to link lines to make
	testsuite work both with --no-add-needed and with --add-needed,
	including latest ld.bfd.
	* testsuite/cxx2.sh: Likewise.
	* testsuite/cxx3.sh: Likewise.
	* testsuite/deps1.sh: Likewise.
	* testsuite/deps2.sh: Likewise.
	* testsuite/ifunc1.sh: Likewise.
	* testsuite/ifunc2.sh: Likewise.
	* testsuite/ifunc3.sh: Likewise.
	* testsuite/quick1.sh: Likewise.
	* testsuite/quick2.sh: Likewise.
	* testsuite/quick3.sh: Likewise.
	* testsuite/reloc1.sh: Likewise.
	* testsuite/reloc10.sh: Likewise.
	* testsuite/reloc11.sh: Likewise.
	* testsuite/reloc3.sh: Likewise.
	* testsuite/reloc6.sh: Likewise.
	* testsuite/reloc7.sh: Likewise.
	* testsuite/shuffle1.sh: Likewise.
	* testsuite/shuffle2.sh: Likewise.
	* testsuite/shuffle3.sh: Likewise.
	* testsuite/shuffle4.sh: Likewise.
	* testsuite/shuffle5.sh: Likewise.
	* testsuite/shuffle6.sh: Likewise.
	* testsuite/shuffle7.sh: Likewise.
	* testsuite/shuffle8.sh: Likewise.
	* testsuite/shuffle9.sh: Likewise.
	* testsuite/tls1.sh: Likewise.
	* testsuite/tls2.sh: Likewise.