@@ -1,0 +1,7 @@
+extern int baz ();
+
+int
+bar ()
+{
+  return baz ();
+}
